[package]
name = "goat"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aws-config = { version= "1.1.2", features = ["behavior-version-latest"] }
aws-sdk-dynamodb = "1.11.0"
tokio = { version = "1", features = ["full"] }
